@@ -1,3 +1,9 @@
+2010-06-21  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Build fix. Fix header includes for ENABLE(DATABASE)
+
+        * bindings/js/JSExceptionBase.cpp:
+
 2010-06-21  Anders Carlsson  <andersca@apple.com>
 
         Fix clang++ build.
